Fix homepage, navbar not showing on mobile

--- a/src/components/css/Home.scss
+++ b/src/components/css/Home.scss
@@ -522,9 +522,8 @@ iframe {
 }
 
 #partner-imgs {
-    padding: 50px;
-    height: auto;
-    width: 160px;
+    max-width: 250px;
+    max-height: 250px;
 }
 
 #title {
